--- a/Integrated CA.ipynb
+++ b/Integrated CA.ipynb
@@ -1257,6 +1257,7 @@
     "CTM_num['Skewness'] = rain_df[num].skew()\n",
     "CTM_num['Kurtosis'] = rain_df[num].kurtosis()\n",
     "\n",
+    "# Displaying CTM table\n",
     "CTM_num"
    ]
   },
